--- a/todo-list/src/global.css
+++ b/todo-list/src/global.css
@@ -2,6 +2,9 @@
   --blue: #4EA8DE;
   --blue-dark: #1E6F9F;
 
+  --purple: #8284FA;
+  --purple-dark: #5E60CE;
+
   --gray-100: #F2F2F2;
   --gray-200: #D9D9D9;
   --gray-300: #808080;
@@ -9,9 +12,8 @@
   --gray-500: #262626;
   --gray-600: #1A1A1A;
   --gray-700: #0D0D0D;
-  
-  --purple: #8284FA;
-  --purple-dark: #5E60CE;
+
+  --danger: #E83F5B;
 }
 
 :focus {
