chore: update input size

--- a/todo-list/src/components/TaskInputBar.module.css
+++ b/todo-list/src/components/TaskInputBar.module.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: calc(0px - 1.5rem - 6px);
 }
 
 input[type="text"] {
@@ -10,7 +11,9 @@ input[type="text"] {
   border-radius: 8px;
   box-sizing: border-box;
   padding: 16px;
-  width: 37.875rem;
+  width: 39.875rem;
+  height: 3.375rem;
+  caret-color: var(--gray-100);
 }
 
 button[type="submit"] {
