--- a/todo-list/src/components/TaskCard.module.css
+++ b/todo-list/src/components/TaskCard.module.css
@@ -1,3 +1,19 @@
 .card {
   display: flex;
+  justify-content: center;
+}
+
+.content {
+  border-radius: 8px;
+  border: 1px solid var(--gray-400, #333);
+  background: var(--gray-500, #262626);
+  box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.06);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 12px;
+  align-self: stretch;
+  width: 46rem;
+  height: 4.5rem;
+  padding: 16px;
 }
