chore: disable button when input is empty

--- a/todo-list/src/components/TaskInputBar.module.css
+++ b/todo-list/src/components/TaskInputBar.module.css
@@ -40,3 +40,8 @@ button[type="submit"] img {
   width: 1rem;
   margin-left: 8px;
 }
+
+button[type="submit"]:disabled {
+  background: var(--gray-500);
+  cursor: not-allowed;
+}
